--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
   },
   "homepage": "https://github.com/lbryio/www.spee.ch#readme",
   "dependencies": {
-    "spee.ch": "git://github.com/lbryio/spee.ch.git#speech-as-a-service"
+    "spee.ch": "git://github.com/lbryio/spee.ch.git#speech-as-a-package"
   }
 }
