--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.js",
+    "build-dev": "webpack --config webpack.config.js  --watch"
   },
   "repository": {
     "type": "git",
@@ -16,13 +19,22 @@
     "blockchain",
     "spee.ch"
   ],
-  "author": "@billbitt",
+  "author": "@lbryio, @billbitt",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/lbryio/www.spee.ch/issues"
   },
   "homepage": "https://github.com/lbryio/www.spee.ch#readme",
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "react": "^16.2.0",
+    "webpack": "^3.10.0",
+    "webpack-node-externals": "^1.6.0",
     "spee.ch": "git://github.com/lbryio/spee.ch.git#speech-as-a-package"
   }
 }
