--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "www.spee.ch",
+  "name": "billbitt.spee.ch",
   "version": "0.0.1",
   "description": "A web app that uses the spee.ch codebase",
   "main": "index.js",
@@ -7,34 +7,44 @@
     "start": "node index.js",
     "start-dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js",
-    "build-dev": "webpack --config webpack.config.js  --watch"
+    "build": "webpack --config webpack.prod.js",
+    "build-dev": "webpack --config webpack.dev.js",
+    "pre-build-dev": "webpack --config webpack.dev.prebuild.js",
+    "build-dev-client": "webpack --config webpack.dev.client.js",
+    "build-dev-server": "webpack --config webpack.dev.server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lbryio/www.spee.ch.git"
+    "url": "git+https://github.com/billbitt/billbitt.spee.ch.git"
   },
   "keywords": [
     "lbry",
     "blockchain",
     "spee.ch"
   ],
-  "author": "@lbryio, @billbitt",
+  "author": "@billbitt",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/lbryio/www.spee.ch/issues"
+    "url": "https://github.com/billbitt/billbitt.spee.ch/issues"
   },
-  "homepage": "https://github.com/lbryio/www.spee.ch#readme",
+  "homepage": "https://github.com/billbitt/billbitt.spee.ch#readme",
   "dependencies": {
+    "spee.ch-server": "git://github.com/lbryio/spee.ch.git#speech-as-a-package",
+    "spee.ch-components": "git://github.com/billbitt/spee.ch-components.git"
+  },
+  "devDependencies": {
+    "nodemon": "^1.15.1",
+    "babel-polyfill": "^6.26.0",
+    "whatwg-fetch": "^2.0.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-polyfill": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "react": "^16.2.0",
+    "babel-register": "^6.26.0",
+    "css-loader": "^0.28.9",
     "webpack": "^3.10.0",
-    "webpack-node-externals": "^1.6.0",
-    "spee.ch": "git://github.com/lbryio/spee.ch.git#speech-as-a-package"
+    "webpack-merge": "^4.1.2"
   }
 }
