--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "billbitt.spee.ch",
+  "name": "www.spee.ch",
   "version": "0.0.1",
   "description": "A web app that uses the spee.ch codebase",
   "main": "index.js",
@@ -15,22 +15,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/billbitt/billbitt.spee.ch.git"
+    "url": "git+https://github.com/lbryio/www.spee.ch.git"
   },
   "keywords": [
     "lbry",
     "blockchain",
     "spee.ch"
   ],
-  "author": "@billbitt",
+  "author": "@lbryio @billbitt",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/billbitt/billbitt.spee.ch/issues"
+    "url": "https://github.com/lbryio/www.spee.ch/issues"
   },
-  "homepage": "https://github.com/billbitt/billbitt.spee.ch#readme",
+  "homepage": "https://github.com/lbryio/www.spee.ch#readme",
   "dependencies": {
     "spee.ch-server": "git://github.com/lbryio/spee.ch.git#speech-as-a-package",
-    "spee.ch-components": "git://github.com/billbitt/spee.ch-components.git"
+    "spee.ch-components": "git://github.com/lbryio/www.spee.ch.git"
   },
   "devDependencies": {
     "nodemon": "^1.15.1",
