--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "homepage": "https://github.com/lbryio/www.spee.ch#readme",
   "dependencies": {
     "spee.ch-server": "git://github.com/lbryio/spee.ch.git#speech-as-a-package",
-    "spee.ch-components": "git://github.com/lbryio/www.spee.ch.git"
+    "spee.ch-components": "git://github.com/lbryio/spee.ch-components.git"
   },
   "devDependencies": {
     "nodemon": "^1.15.1",
