rough draft of questions that create json file outputs

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/lbryio/www.spee.ch#readme",
   "dependencies": {
+    "inquirer": "^5.2.0",
     "spee.ch": "git://github.com/lbryio/spee.ch.git",
     "spee.ch-components": "git://github.com/lbryio/spee.ch-components.git",
     "webpack-node-externals": "^1.7.2"
