--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .idea/
 node_modules/
-config/loggerConfig.js
-config/mysqlConfig.js
-config/siteConfig.js
-config/slackConfig.js
+config/loggerConfig.json
+config/mysqlConfig.json
+config/siteConfig.json
+config/slackConfig.json
 index.js
 index.js.map
 public/bundle/bundle.js
