--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
     "inquirer": "^5.2.0",
     "spee.ch": "git://github.com/lbryio/spee.ch.git",
     "spee.ch-components": "git://github.com/lbryio/spee.ch-components.git",
-    "webpack-node-externals": "^1.7.2"
-  },
-  "devDependencies": {
+    "webpack-node-externals": "^1.7.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
