--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@ config/loggerConfig.json
 config/mysqlConfig.json
 config/siteConfig.json
 config/slackConfig.json
-index.js
-index.js.map
+./index.js
+./index.js.map
 public/bundle/bundle.js
 public/bundle/bundle.js.map
-_oldConfig/
