--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "www.spee.ch",
   "version": "0.0.1",
   "description": "A web app that uses the spee.ch codebase",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "configure": "node cli/configure.js",
     "build": "webpack --config webpack.config.js",
     "build-dev": "webpack --config webpack.config.js --watch",
-    "start": "node index.js",
+    "start": "node server.js",
     "start-dev": "builder concurrent build-dev start-dev-server",
-    "start-dev-server": "nodemon index.js",
+    "start-dev-server": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +27,9 @@
     "url": "https://github.com/lbryio/www.spee.ch/issues"
   },
   "homepage": "https://github.com/lbryio/www.spee.ch#readme",
+  "_moduleAliases": {
+    "@pages"     : "custom/views/pages"
+  },
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -41,6 +44,7 @@
     "cross-fetch": "^2.1.1",
     "css-loader": "^0.28.9",
     "inquirer": "^5.2.0",
+    "module-alias": "^2.0.6",
     "nodemon": "^1.15.1",
     "spee.ch": "git://github.com/lbryio/spee.ch.git",
     "spee.ch-components": "git://github.com/lbryio/spee.ch-components.git",
