--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "configure": "node cli/configure.js",
     "build": "webpack --config webpack.config.js",
     "build-dev": "webpack --config webpack.config.js --watch",
+    "build:lib": "babel src -d lib",
+    "build:lib:watch": "babel src -w -d lib",
     "start": "node server.js",
     "start-dev": "builder concurrent build-dev start-dev-server",
     "start-dev-server": "nodemon server.js",
@@ -27,11 +29,12 @@
     "url": "https://github.com/lbryio/www.spee.ch/issues"
   },
   "homepage": "https://github.com/lbryio/www.spee.ch#readme",
-  "_moduleAliases": {
-    "@pages"     : "custom/views/pages"
-  },
   "dependencies": {
-    "babel-core": "^6.26.0",
+    "@babel/cli": "^7.0.0-beta.37",
+    "@babel/core": "^7.0.0-beta.37",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
+    "@babel/preset-env": "^7.0.0-beta.46",
+    "@babel/preset-react": "^7.0.0-beta.46",
     "babel-loader": "^7.1.2",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
