--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-react": "^7.0.0-beta.46",
+    "axios": "^0.18.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -49,6 +50,7 @@
     "cross-fetch": "^2.1.1",
     "css-loader": "^0.28.9",
     "inquirer": "^5.2.0",
+    "make-dir": "^1.3.0",
     "module-alias": "^2.0.6",
     "nodemon": "^1.15.1",
     "spee.ch": "git://github.com/lbryio/spee.ch.git",
