--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "babel-register": "^6.26.0",
     "builder": "^4.0.0",
     "cross-fetch": "^2.1.1",
-    "css-loader": "^0.28.9",
     "inquirer": "^5.2.0",
     "make-dir": "^1.3.0",
     "module-alias": "^2.0.6",
@@ -58,5 +57,12 @@
     "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.7.2",
     "whatwg-fetch": "^2.0.4"
+  },
+  "devDependencies": {
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0"
   }
 }
