--- a/package.json
+++ b/package.json
@@ -61,8 +61,10 @@
   "devDependencies": {
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0"
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1"
   }
 }
