removed custom components from initial state build

--- a/config/lbryConfig.json
+++ b/config/lbryConfig.json
@@ -1,8 +1,4 @@
-const lbryConfig = {
-  api: {
-    apiHost: 'localhost',
-    apiPort: '5279',
-  },
-};
-
-module.exports = lbryConfig;
+{
+  "apiHost": "localhost",
+  "apiPort": "5279"
+}
