--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "make-dir": "^1.3.0",
     "module-alias": "^2.0.6",
     "nodemon": "^1.15.1",
-    "spee.ch": "git://github.com/lbryio/spee.ch.git",
+    "spee.ch": "git://github.com/lbryio/spee.ch.git#fix-configs-loading",
     "webpack": "^3.10.0",
     "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.7.2",
