--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 .idea/
-node_modules/
 ./index.js
 ./index.js.map
-public/bundle/bundle.js
-public/bundle/bundle.js.map
+build/
 config/mysqlConfig.json
 config/siteConfig.json
+node_modules/
+public/bundle/bundle.js
+public/bundle/bundle.js.map
+
