--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "make-dir": "^1.3.0",
     "module-alias": "^2.0.6",
     "nodemon": "^1.15.1",
+    "sequelize-cli": "^4.0.0",
     "spee.ch": "git://github.com/lbryio/spee.ch.git",
     "webpack": "^3.10.0",
     "webpack-merge": "^4.1.2",
